--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -9,10 +9,14 @@
 		padding: 0;
 		margin: 0;
 	}
+	#search {
+		display: flex;
+	}
 </style>
 <script src="popup.js"></script>
 <div id="mainPopup">
 <form id="search">
 	<input id="word" type="text" name="word" placeholder="" />
+	<input type="submit" value="Search" />
 </form>
 </div>
